--- a/projeto-netflix/package.json
+++ b/projeto-netflix/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Projeto front end netflix",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "start": "gulp"
@@ -13,6 +14,7 @@
   "devDependencies": {
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^9.0.0",
     "gulp-uglifycss": "^1.1.0",
     "jest": "^27.0.6"
   },
