--- a/projeto-netflix/package.json
+++ b/projeto-netflix/package.json
@@ -16,7 +16,8 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^9.0.0",
     "gulp-uglifycss": "^1.1.0",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "concat": "^1.0.3",
