--- a/redeSocial/package.json
+++ b/redeSocial/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "chai": "*",
     "cssnano": "^6.0.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -16,11 +17,13 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-watch": "^5.0.1",
     "jest": "^29.7.0",
+    "mocha": "^10.3.0",
     "node-sass": "^9.0.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "test": "mocha"
   },
   "type": "module"
 }
