--- a/redeSocial_React/redesocial/package.json
+++ b/redeSocial_React/redesocial/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
+    "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
