--- a/redeSocial_React/redesocial/servidor/package.json
+++ b/redeSocial_React/redesocial/servidor/package.json
@@ -18,5 +18,8 @@
     "express-validator": "^7.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12"
   }
 }
