--- a/redeSocial_React/redesocial/servidor/package.json
+++ b/redeSocial_React/redesocial/servidor/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12"
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/nodemailer": "^6.4.14"
   }
 }
