--- a/redeSocial_React/redesocial/package.json
+++ b/redeSocial_React/redesocial/package.json
@@ -19,7 +19,8 @@
     "bootstrap": "^5.3.3",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
