--- a/redeSocial_React/redesocial/servidor/package.json
+++ b/redeSocial_React/redesocial/servidor/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -25,6 +26,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/nodemailer": "^6.4.14"
+    "@types/nodemailer": "^6.4.14",
+    "@types/node": "^20",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21"
   }
 }
