--- a/redeSocial_React/redesocial/servidor/package.json
+++ b/redeSocial_React/redesocial/servidor/package.json
@@ -24,10 +24,11 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/nodemailer": "^6.4.14",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21"
   }
